fade in contents

--- a/public/index.html
+++ b/public/index.html
@@ -22,27 +22,30 @@
             </div>
         </div>
         <div class="main_banner">
-            <div class="ordermaid_text_container">
-                <span class="main_banner_text">
-                一人ひとりに合わせた
-                </span>
-                <span class="main_banner_text">
-                オーダーメイド保育
-                </span>
-                <div class="yellow_dot_line" style="width: 262px;"></div>
+            <div class="main_banner_contents">
+                <div class="ordermaid_text_container">
+                    <span class="main_banner_text">
+                    一人ひとりに合わせた
+                    </span>
+                    <span class="main_banner_text">
+                    オーダーメイド保育
+                    </span>
+                    <div class="yellow_dot_line" style="width: 262px;"></div>
+                </div>
+                <div class="organic_text_container">
+                    <span class="main_banner_text">
+                    オーガニック給食
+                    </span>
+                    <div class="yellow_dot_line" style="width: 200px;"></div>
+                    <span class="main_banner_text main_banner_text_smaller">
+                    自園給食・園内調理
+                    </span>
+                </div>            
+                <div class="come_join_us"></div>
             </div>
-            <div class="organic_text_container">
-                <span class="main_banner_text">
-                オーガニック給食
-                </span>
-                <div class="yellow_dot_line" style="width: 200px;"></div>
-                <span class="main_banner_text main_banner_text_smaller">
-                自園給食・園内調理
-                </span>
-            </div>
-            <div class="come_join_us"></div>
+
         </div>
-        <div class="beginners">
+        <div class="beginners fade_in_late">
             <span class="beginners_text">
                 初めて家族と離れて過ごすお子様でも、 
             </span>
@@ -53,7 +56,7 @@
                 ことの出来る環境を提供いたします。            
             </span>
         </div>
-        <div class="applications">
+        <div class="applications fade_in_late">
             <span class="applications_text">
                 月極園児を人数限定で
             </span>
@@ -65,7 +68,7 @@
             </span>
         </div>
 
-        <div class="food_section">
+        <div class="food_section fade_in_late">
             <div class="food_picture">
                 <img src="assets/images/food@3x.png" />
             </div>
@@ -86,7 +89,7 @@
             </div>
         
         </div>
-        <div class="age_section">
+        <div class="age_section fade_in_late">
             <div class="age_picture">
                 <img src="assets/images/S__83370012@2x.png" />
             </div>
@@ -107,7 +110,7 @@
             </div>
         </div>
 
-        <div class="price_section">
+        <div class="price_section fade_in_late">
             <div class="price_picture">
                 <img src="assets/images/kids@3x.png" />
             </div>
@@ -148,7 +151,7 @@
 
         </div>
 
-        <div class="childcare_fee_support_section">
+        <div class="childcare_fee_support_section fade_in_late">
             <div class="childcare_fee_support_title_section">
                 <div class="childcare_fee_support_title">
                     保育利用料の軽減制度
@@ -173,7 +176,7 @@
                 </span>
             </div>
         </div>
-        <div class="footer_section">
+        <div class="footer_section fade_in_late">
             <div class="footer_logo">
                 <img src="assets/images/logo1@2x.png" />
             </div>
