make the button and the link clickable

--- a/public/index.html
+++ b/public/index.html
@@ -181,10 +181,14 @@
                 <img src="assets/images/logo1@2x.png" />
             </div>
             <div class="footer_url_here">
-                <img src="assets/images/url_here@3x.png" />
+                <a href="http://www.comoencasa.jp">
+                    <img src="assets/images/url_here@3x.png" />
+                </a>
             </div>
             <div class="footer_url">
-                http://www.comoencasa.jp
+                <a href="http://www.comoencasa.jp">
+                    http://www.comoencasa.jp
+                </a>
             </div>
         </div>
     </div>
