--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>como en casa</title>
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="assets/style.css" />
 </head>
 <body>
     <div id="como_en_casa">
-        <div class="top_bar">
+        <div class="top_bar animate__animated animate__fadeIn animate__delay-1s animate__slower">
             <div class="top_bar_house_logo">
                 <img src="assets/images/s_aoyama.png" />
             </div>
@@ -21,9 +25,9 @@
                 <img src="assets/images/yellow_phone.png" />
             </div>
         </div>
-        <div class="main_banner">
+        <div class="main_banner animate__animated animate__fadeIn animate__slow">
             <div class="main_banner_contents">
-                <div class="ordermaid_text_container">
+                <div class="ordermaid_text_container animate__animated animate__fadeIn animate__delay-1s">
                     <span class="main_banner_text">
                     一人ひとりに合わせた
                     </span>
@@ -32,7 +36,7 @@
                     </span>
                     <div class="yellow_dot_line" style="width: 262px;"></div>
                 </div>
-                <div class="organic_text_container">
+                <div class="organic_text_container animate__animated animate__fadeIn animate__delay-1s animate__slow">
                     <span class="main_banner_text">
                     オーガニック給食
                     </span>
@@ -41,11 +45,11 @@
                     自園給食・園内調理
                     </span>
                 </div>            
-                <div class="come_join_us"></div>
+                <div class="come_join_us animate__animated animate__fadeIn animate__delay-2s animate__slower"></div>
             </div>
 
         </div>
-        <div class="beginners fade_in_late">
+        <div class="beginners animate__animated animate__fadeIn animate__delay-2s">
             <span class="beginners_text">
                 初めて家族と離れて過ごすお子様でも、 
             </span>
@@ -56,7 +60,7 @@
                 ことの出来る環境を提供いたします。            
             </span>
         </div>
-        <div class="applications fade_in_late">
+        <div class="applications animate__animated animate__fadeIn animate__delay-2s">
             <span class="applications_text">
                 月極園児を人数限定で
             </span>
@@ -68,7 +72,7 @@
             </span>
         </div>
 
-        <div class="food_section fade_in_late">
+        <div class="food_section animate__animated animate__fadeIn animate__delay-2s">
             <div class="food_picture">
                 <img src="assets/images/food@3x.png" />
             </div>
@@ -89,7 +93,7 @@
             </div>
         
         </div>
-        <div class="age_section fade_in_late">
+        <div class="age_section animate__animated animate__fadeIn animate__delay-2s">
             <div class="age_picture">
                 <img src="assets/images/S__83370012@2x.png" />
             </div>
@@ -110,7 +114,7 @@
             </div>
         </div>
 
-        <div class="price_section fade_in_late">
+        <div class="price_section animate__animated animate__fadeIn animate__delay-2s">
             <div class="price_picture">
                 <img src="assets/images/kids@3x.png" />
             </div>
@@ -151,7 +155,7 @@
 
         </div>
 
-        <div class="childcare_fee_support_section fade_in_late">
+        <div class="childcare_fee_support_section animate__animated animate__fadeIn animate__delay-2s">
             <div class="childcare_fee_support_title_section">
                 <div class="childcare_fee_support_title">
                     保育利用料の軽減制度
@@ -176,7 +180,7 @@
                 </span>
             </div>
         </div>
-        <div class="footer_section fade_in_late">
+        <div class="footer_section animate__animated animate__fadeIn animate__delay-2s">
             <div class="footer_logo">
                 <img src="assets/images/logo1@2x.png" />
             </div>
