slightly adjust content position and animation. add version string to css link

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="assets/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/style.css?version=20220202114500" />
 </head>
 <body>
     <div id="como_en_casa">
@@ -36,7 +36,7 @@
                     </span>
                     <div class="yellow_dot_line" style="width: 262px;"></div>
                 </div>
-                <div class="organic_text_container animate__animated animate__fadeIn animate__delay-1s animate__slow">
+                <div class="organic_text_container animate__animated animate__fadeIn animate__delay-2s animate__slow">
                     <span class="main_banner_text">
                     オーガニック給食
                     </span>
