--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,14 @@
                     自園給食・園内調理
                     </span>
                 </div>            
-                <div class="come_join_us animate__animated animate__fadeIn animate__delay-2s animate__slower"></div>
+                <div class="come_join_us animate__animated animate__fadeIn animate__delay-2s animate__slower">
+                    <div class="come_join_us_text_fistline">
+                        渋谷区、港区の月極保育は
+                    </div>
+                    <div class="come_join_us_comoencasa">コモエンカサ</div>
+                    <div class="come_join_us_text">にお任せください。</div>
+
+                </div>
             </div>
 
         </div>
