make phone icon blink and tap to call

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,10 @@
                 <span class="top_bar_contact_text top_bar_contact_text_phone_number">03-6721-0312</span>
                 <span class="top_bar_contact_text top_bar_contact_text_hours">9:00 ~ 20:00</span>
             </div>
-            <div class="top_bar_yellow_phone">
-                <img src="assets/images/yellow_phone.png" />
+            <div class="top_bar_yellow_phone blink_me">
+                <a href="tel:0367210312">
+                    <img src="assets/images/yellow_phone.png" />
+                </a>
             </div>
         </div>
         <div class="main_banner animate__animated animate__fadeIn animate__slow">
