--- a/info.html
+++ b/info.html
@@ -3,6 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-66ZMMTES5F"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-66ZMMTES5F');
+  </script>
+  <!-- End Global site tag (gtag.js) - Google Analytics -->
+
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>コモエンカサ　コンセプト</title>
   <style type="text/css">
