--- a/afterschool/index.html
+++ b/afterschool/index.html
@@ -7,15 +7,16 @@
 <!--<![endif]-->
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-60270166-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-66ZMMTES5F"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-		gtag('config', 'UA-60270166-1');
-	</script>
+    gtag('config', 'G-66ZMMTES5F');
+    </script>
+    <!-- End Global site tag (gtag.js) - Google Analytics -->
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width" />
