--- a/banner1/1.html
+++ b/banner1/1.html
@@ -7,6 +7,16 @@
 
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-66ZMMTES5F"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-66ZMMTES5F');
+  </script>
+  <!-- End Global site tag (gtag.js) - Google Analytics -->
 
 
 
