--- a/sitter.html
+++ b/sitter.html
@@ -8,6 +8,17 @@
 
 <head>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-66ZMMTES5F"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-66ZMMTES5F');
+  </script>
+  <!-- End Global site tag (gtag.js) - Google Analytics -->
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
 
