--- a/thanks.html
+++ b/thanks.html
@@ -5,6 +5,17 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-66ZMMTES5F"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-66ZMMTES5F');
+</script>
+<!-- End Global site tag (gtag.js) - Google Analytics -->
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width" />
 
