add page_title to gtag

--- a/about_us/index.html
+++ b/about_us/index.html
@@ -1,12 +1,6 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>como en casa</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" type="text/css" href="assets/style.css?version=20220207175700" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-66ZMMTES5F"></script>
@@ -15,9 +9,19 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-66ZMMTES5F');
+    gtag('config', 'G-66ZMMTES5F', {
+        'page_title': 'PR'
+    });
     </script>
     <!-- End Global site tag (gtag.js) - Google Analytics -->
+
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>como en casa</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" type="text/css" href="assets/style.css?version=20220207175700" />
 
     <!-- Meta Pixel Code -->
     <script>
