--- a/banner1/1.html
+++ b/banner1/1.html
@@ -3,22 +3,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
-  <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-66ZMMTES5F"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-66ZMMTES5F');
+    gtag('config', 'G-66ZMMTES5F', {
+      'page_title': 'Banner'
+    });
   </script>
   <!-- End Global site tag (gtag.js) - Google Analytics -->
 
-
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 
   <script charset="utf-8" type="text/javascript" src="jquery-1.2.6.min.js"></script>
   <script charset="utf-8" type="text/javascript" src="lm_fx.js"></script>
