--- a/sitter.html
+++ b/sitter.html
@@ -15,7 +15,9 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-66ZMMTES5F');
+    gtag('config', 'G-66ZMMTES5F', {
+      'page_title': 'Sitter',
+    });
   </script>
   <!-- End Global site tag (gtag.js) - Google Analytics -->
 
