--- a/info.html
+++ b/info.html
@@ -6,11 +6,13 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-66ZMMTES5F"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-66ZMMTES5F');
+    gtag('config', 'G-66ZMMTES5F', {
+      'page_title': 'Info',
+    });
   </script>
   <!-- End Global site tag (gtag.js) - Google Analytics -->
 
