--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,9 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-66ZMMTES5F');
+    gtag('config', 'G-66ZMMTES5F', {
+      'page_title': 'Schedule',
+    });
   </script>
   <!-- End Global site tag (gtag.js) - Google Analytics -->
 
