--- a/about_us/index.html
+++ b/about_us/index.html
@@ -2,244 +2,238 @@
 
 <head>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-66ZMMTES5F"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KSQ9TF5');</script>
+  <!-- End Google Tag Manager -->
 
-    gtag('config', 'G-66ZMMTES5F', {
-        'page_title': 'PR'
-    });
-    </script>
-    <!-- End Global site tag (gtag.js) - Google Analytics -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>como en casa</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" type="text/css" href="assets/style.css?version=20220207175700" />
 
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>como en casa</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" type="text/css" href="assets/style.css?version=20220207175700" />
-
-    <!-- Meta Pixel Code -->
-    <script>
-        !function (f, b, e, v, n, t, s) {
-            if (f.fbq) return; n = f.fbq = function () {
-                n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-            n.queue = []; t = b.createElement(e); t.async = !0;
-            t.src = v; s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '613232050019138');
-        fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-            src="https://www.facebook.com/tr?id=613232050019138&ev=PageView&noscript=1" /></noscript>
-    <!-- End Meta Pixel Code -->
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '613232050019138');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=613232050019138&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 
 </head>
 
 <body>
-    <div id="como_en_casa">
-        <div class="top_bar animate__animated animate__fadeIn animate__delay-1s animate__slower">
-            <div class="top_bar_house_logo">
-                <img src="assets/images/s_aoyama.png" />
-            </div>
-            <div class="top_bar_contact">
-                <span class="top_bar_contact_text">お問い合わせ</span>
-                <span class="top_bar_contact_text top_bar_contact_text_phone_number">03-6721-0312</span>
-                <span class="top_bar_contact_text top_bar_contact_text_hours">9:00 ~ 20:00</span>
-            </div>
-            <div class="top_bar_yellow_phone blink_me">
-                <a href="tel:0367210312">
-                    <img src="assets/images/yellow_phone.png" />
-                </a>
-            </div>
-        </div>
-        <div class="main_banner animate__animated animate__fadeIn animate__slow">
-            <div class="main_banner_contents">
-                <div class="ordermaid_text_container animate__animated animate__fadeIn animate__delay-1s">
-                    <span class="main_banner_text">
-                        一人ひとりに合わせた
-                    </span>
-                    <span class="main_banner_text">
-                        オーダーメイド保育
-                    </span>
-                    <div class="yellow_dot_line" style="width: 262px;"></div>
-                </div>
-                <div class="organic_text_container animate__animated animate__fadeIn animate__delay-2s animate__slow">
-                    <span class="main_banner_text">
-                        オーガニック給食
-                    </span>
-                    <div class="yellow_dot_line" style="width: 200px;"></div>
-                    <span class="main_banner_text main_banner_text_smaller">
-                        自園給食・園内調理
-                    </span>
-                </div>
-                <div class="come_join_us animate__animated animate__fadeIn animate__delay-2s animate__slower">
-                    <div class="come_join_us_text_fistline">
-                        渋谷区、港区の月極保育は
-                    </div>
-                    <div class="come_join_us_comoencasa">コモエンカサ</div>
-                    <div class="come_join_us_text">にお任せください。</div>
-
-                </div>
-            </div>
-
-        </div>
-        <div class="beginners animate__animated animate__fadeIn animate__delay-2s">
-            <span class="beginners_text">
-                初めて家族と離れて過ごすお子様でも、
-            </span>
-            <span class="beginners_text">
-                お家と同じくらい安心しのびのびと過ごす
-            </span>
-            <span class="beginners_text">
-                ことの出来る環境を提供いたします。
-            </span>
-        </div>
-        <div class="applications animate__animated animate__fadeIn animate__delay-2s">
-            <span class="applications_text">
-                月極園児を人数限定で
-            </span>
-            <span class="applications_text">
-                募集しております。
-            </span>
-            <span class="applications_text">
-                詳しくはお問い合わせ下さい
-            </span>
-        </div>
-
-        <div class="food_section animate__animated animate__fadeIn animate__delay-2s">
-            <div class="food_picture">
-                <img src="assets/images/food@3x.png" />
-            </div>
-
-            <div class="about_food_text">
-                <div class="about_food_title">
-                    Food
-                </div>
-                <div class="about_food_subtitle">
-                    コモエンカサのオリジナル
-                </div>
-                <div class="about_food_strong">
-                    「オーガニック給食」
-                </div>
-                <div class="about_food_details">
-                    国産の小麦や豆類など、スタッフが自信を持っておすすめできる食材を使用しています。また、「環境に配慮しながら、丁寧なものづくりをされている生産者さんを応援していきたい。」という想いもあり、顔の見える方々から仕入れをしています。子どもたちの味覚を育て、保護者のみなさまに本物の安心を届けるコモエンカサ「オーガニック給食」を是非、大切なお子様へご検討下さい
-                </div>
-            </div>
-
-        </div>
-        <div class="age_section animate__animated animate__fadeIn animate__delay-2s">
-            <div class="age_picture">
-                <img src="assets/images/S__83370012@2x.png" />
-            </div>
-            <div class="age_text">
-                <div class="age_title">
-                    Age
-                </div>
-                <div class="age_subtitle">
-                    利用対象年齢
-                </div>
-                <div class="age_details_strong">
-                    生後57日以上～2歳児まで
-                </div>
-                <div class="age_details_weak">
-                    定員12名　少人数制月極保育園
-                </div>
-
-            </div>
-        </div>
-
-        <div class="price_section animate__animated animate__fadeIn animate__delay-2s">
-            <div class="price_picture">
-                <img src="assets/images/kids@3x.png" />
-            </div>
-            <div class="price_text">
-                <div class="price_title">
-                    Price
-                </div>
-                <div class="price_subtitle">
-                    青山校(月極保育)
-                </div>
-                <div class="price_details">
-                    <span>月極保育(8:30~20:00)</span>
-                    <span>週5日8時間利用の場合</span>
-                    <span>0歳児　85,000円 　/</span>
-                </div>
-                <div class="price_tips">
-                    <span>保育利用料の軽減制度を</span>
-                    <span>ご利用頂けます</span>
-                </div>
-                <div class="price_with_tips_arrow">
-                    <img src="assets/images/arrow.png" />
-                </div>
-                <div class="price_with_tips">
-                    <div class="price_with_tips_for">
-                        保育利用料の軽減制度を使った場合
-                    </div>
-                    <div class="price_with_tips_monthly_price">
-                        月額45,000円
-                    </div>
-                    <div class="price_with_tips_shibuya">
-                        ＜渋谷区の場合＞
-                    </div>
-                </div>
-                <div class="price_included">
-                    上記の中に、保育料・カリキュラム費・施設維持費等が含まれています。早朝・延長保育の利用も可能です。園までお問合せ下さい。
-                </div>
-            </div>
-
-        </div>
-
-        <div class="childcare_fee_support_section animate__animated animate__fadeIn animate__delay-2s">
-            <div class="childcare_fee_support_title_section">
-                <div class="childcare_fee_support_title">
-                    保育利用料の軽減制度
-                </div>
-                <div class="childcare_fee_support_shibuya">
-                    ＜渋谷区の場合＞
-                </div>
-            </div>
-            <div class="childcare_fee_support_amount">
-                月額40,000円
-            </div>
-            <div class="childcare_fee_support_details">
-                を上限として認可外保育施設の保育利用料を前期分（4月～8月在籍分）及び後期分（9月～翌年3月在籍分）に分けて区から各ご家庭に助成されます。
-            </div>
-            <div class="childcare_fee_support_notes">
-                <span>
-                    ※区によって保育利用料の軽減制度の申請方法や金額が異なりますので、お住まいの区役所にご確認下さい。
-                </span>
-
-                <span>
-                    ※お住まいの各区役所で、お手続きをお願い致します。
-                </span>
-            </div>
-        </div>
-        <div class="footer_section animate__animated animate__fadeIn animate__delay-2s">
-            <div class="footer_logo">
-                <img src="assets/images/logo1@2x.png" />
-            </div>
-            <div class="footer_url_here">
-                <a href="http://www.comoencasa.jp">
-                    <img src="assets/images/url_here@3x.png" />
-                </a>
-            </div>
-            <div class="footer_url">
-                <a href="http://www.comoencasa.jp">
-                    http://www.comoencasa.jp
-                </a>
-            </div>
-        </div>
+  <div id="como_en_casa">
+    <div class="top_bar animate__animated animate__fadeIn animate__delay-1s animate__slower">
+      <div class="top_bar_house_logo">
+        <img src="assets/images/s_aoyama.png" />
+      </div>
+      <div class="top_bar_contact">
+        <span class="top_bar_contact_text">お問い合わせ</span>
+        <span class="top_bar_contact_text top_bar_contact_text_phone_number">03-6721-0312</span>
+        <span class="top_bar_contact_text top_bar_contact_text_hours">9:00 ~ 20:00</span>
+      </div>
+      <div class="top_bar_yellow_phone blink_me">
+        <a href="tel:0367210312">
+          <img src="assets/images/yellow_phone.png" />
+        </a>
+      </div>
     </div>
+    <div class="main_banner animate__animated animate__fadeIn animate__slow">
+      <div class="main_banner_contents">
+        <div class="ordermaid_text_container animate__animated animate__fadeIn animate__delay-1s">
+          <span class="main_banner_text">
+            一人ひとりに合わせた
+          </span>
+          <span class="main_banner_text">
+            オーダーメイド保育
+          </span>
+          <div class="yellow_dot_line" style="width: 262px;"></div>
+        </div>
+        <div class="organic_text_container animate__animated animate__fadeIn animate__delay-2s animate__slow">
+          <span class="main_banner_text">
+            オーガニック給食
+          </span>
+          <div class="yellow_dot_line" style="width: 200px;"></div>
+          <span class="main_banner_text main_banner_text_smaller">
+            自園給食・園内調理
+          </span>
+        </div>
+        <div class="come_join_us animate__animated animate__fadeIn animate__delay-2s animate__slower">
+          <div class="come_join_us_text_fistline">
+            渋谷区、港区の月極保育は
+          </div>
+          <div class="come_join_us_comoencasa">コモエンカサ</div>
+          <div class="come_join_us_text">にお任せください。</div>
+
+        </div>
+      </div>
+
+    </div>
+    <div class="beginners animate__animated animate__fadeIn animate__delay-2s">
+      <span class="beginners_text">
+        初めて家族と離れて過ごすお子様でも、
+      </span>
+      <span class="beginners_text">
+        お家と同じくらい安心しのびのびと過ごす
+      </span>
+      <span class="beginners_text">
+        ことの出来る環境を提供いたします。
+      </span>
+    </div>
+    <div class="applications animate__animated animate__fadeIn animate__delay-2s">
+      <span class="applications_text">
+        月極園児を人数限定で
+      </span>
+      <span class="applications_text">
+        募集しております。
+      </span>
+      <span class="applications_text">
+        詳しくはお問い合わせ下さい
+      </span>
+    </div>
+
+    <div class="food_section animate__animated animate__fadeIn animate__delay-2s">
+      <div class="food_picture">
+        <img src="assets/images/food@3x.png" />
+      </div>
+
+      <div class="about_food_text">
+        <div class="about_food_title">
+          Food
+        </div>
+        <div class="about_food_subtitle">
+          コモエンカサのオリジナル
+        </div>
+        <div class="about_food_strong">
+          「オーガニック給食」
+        </div>
+        <div class="about_food_details">
+          国産の小麦や豆類など、スタッフが自信を持っておすすめできる食材を使用しています。また、「環境に配慮しながら、丁寧なものづくりをされている生産者さんを応援していきたい。」という想いもあり、顔の見える方々から仕入れをしています。子どもたちの味覚を育て、保護者のみなさまに本物の安心を届けるコモエンカサ「オーガニック給食」を是非、大切なお子様へご検討下さい
+        </div>
+      </div>
+
+    </div>
+    <div class="age_section animate__animated animate__fadeIn animate__delay-2s">
+      <div class="age_picture">
+        <img src="assets/images/S__83370012@2x.png" />
+      </div>
+      <div class="age_text">
+        <div class="age_title">
+          Age
+        </div>
+        <div class="age_subtitle">
+          利用対象年齢
+        </div>
+        <div class="age_details_strong">
+          生後57日以上～2歳児まで
+        </div>
+        <div class="age_details_weak">
+          定員12名　少人数制月極保育園
+        </div>
+
+      </div>
+    </div>
+
+    <div class="price_section animate__animated animate__fadeIn animate__delay-2s">
+      <div class="price_picture">
+        <img src="assets/images/kids@3x.png" />
+      </div>
+      <div class="price_text">
+        <div class="price_title">
+          Price
+        </div>
+        <div class="price_subtitle">
+          青山校(月極保育)
+        </div>
+        <div class="price_details">
+          <span>月極保育(8:30~20:00)</span>
+          <span>週5日8時間利用の場合</span>
+          <span>0歳児　85,000円 　/</span>
+        </div>
+        <div class="price_tips">
+          <span>保育利用料の軽減制度を</span>
+          <span>ご利用頂けます</span>
+        </div>
+        <div class="price_with_tips_arrow">
+          <img src="assets/images/arrow.png" />
+        </div>
+        <div class="price_with_tips">
+          <div class="price_with_tips_for">
+            保育利用料の軽減制度を使った場合
+          </div>
+          <div class="price_with_tips_monthly_price">
+            月額45,000円
+          </div>
+          <div class="price_with_tips_shibuya">
+            ＜渋谷区の場合＞
+          </div>
+        </div>
+        <div class="price_included">
+          上記の中に、保育料・カリキュラム費・施設維持費等が含まれています。早朝・延長保育の利用も可能です。園までお問合せ下さい。
+        </div>
+      </div>
+
+    </div>
+
+    <div class="childcare_fee_support_section animate__animated animate__fadeIn animate__delay-2s">
+      <div class="childcare_fee_support_title_section">
+        <div class="childcare_fee_support_title">
+          保育利用料の軽減制度
+        </div>
+        <div class="childcare_fee_support_shibuya">
+          ＜渋谷区の場合＞
+        </div>
+      </div>
+      <div class="childcare_fee_support_amount">
+        月額40,000円
+      </div>
+      <div class="childcare_fee_support_details">
+        を上限として認可外保育施設の保育利用料を前期分（4月～8月在籍分）及び後期分（9月～翌年3月在籍分）に分けて区から各ご家庭に助成されます。
+      </div>
+      <div class="childcare_fee_support_notes">
+        <span>
+          ※区によって保育利用料の軽減制度の申請方法や金額が異なりますので、お住まいの区役所にご確認下さい。
+        </span>
+
+        <span>
+          ※お住まいの各区役所で、お手続きをお願い致します。
+        </span>
+      </div>
+    </div>
+    <div class="footer_section animate__animated animate__fadeIn animate__delay-2s">
+      <div class="footer_logo">
+        <img src="assets/images/logo1@2x.png" />
+      </div>
+      <div class="footer_url_here">
+        <a href="http://www.comoencasa.jp">
+          <img src="assets/images/url_here@3x.png" />
+        </a>
+      </div>
+      <div class="footer_url">
+        <a href="http://www.comoencasa.jp">
+          http://www.comoencasa.jp
+        </a>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
