noindex some pages

--- a/thanks.html
+++ b/thanks.html
@@ -18,8 +18,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
-
-  <title>コモエンカサ</title>
+  <title>コモエンカサ | Thank you</title>
 
   <!-- SEO -->
   <meta name="description" content="コモエンカサ　表参道駅徒歩2分にあるプレスクール託児所。お母様とお子様に優しい環境をご提供しています。" />
