--- a/about_us/index.html
+++ b/about_us/index.html
@@ -13,7 +13,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>como en casa</title>
+  <title>como en casa | コモエンカサ</title>
+  <meta name="robots" content="noindex" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" type="text/css" href="assets/style.css?version=20220207175700" />
 
