--- a/banner1/1.html
+++ b/banner1/1.html
@@ -13,6 +13,7 @@
   <!-- End Google Tag Manager -->
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="robots" content="noindex" />
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 
   <script charset="utf-8" type="text/javascript" src="jquery-1.2.6.min.js"></script>
