--- a/thanks.html
+++ b/thanks.html
@@ -16,6 +16,7 @@
   })(window,document,'script','dataLayer','GTM-KSQ9TF5');</script>
   <!-- End Google Tag Manager -->
 
+  <meta name="robots" content="noindex" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <title>コモエンカサ | Thank you</title>
