slight change to info.html title

--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
   <!-- End Google Tag Manager -->
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>コモエンカサ　コンセプト</title>
+  <title>コモエンカサ | コンセプト</title>
   <style type="text/css">
     <!--
     body {
