--- a/about_us/index.html
+++ b/about_us/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <base href="http://localhost:8080/about_us/" />
+  <!-- <base href="http://localhost:8080/about_us/" /> -->
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
