style form on sp

--- a/about_us/index.html
+++ b/about_us/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <!-- <base href="http://localhost:8080/about_us/" /> -->
+  <base href="http://localhost:8080/about_us/" />
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -19,9 +19,9 @@
   <title>como en casa | コモエンカサ</title>
   <meta name="robots" content="noindex" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="stylesheet" type="text/css" href="assets/style.css?version=20220207175700" />
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <link rel="stylesheet" type="text/css" href="../css/sp.css" />
+  <link rel="stylesheet" type="text/css" href="assets/style.css?version=202203241053" />
 
   <!-- Meta Pixel Code -->
   <script>
@@ -229,10 +229,10 @@
         <img src="assets/images/logo1@2x.png" />
       </div>
       <!-- /////////////  お問い合わせフォーム /////////////// -->
-      <section style="padding-bottom: 40px;">
+      <section>
         <div id="contact" class="content">
           <div class="box cf bg_gr">
-            <div class="box_left2" style="padding-top: 30px" id="contact2">
+            <div class="box_left2" id="contact2">
               <h3 class="form_title">メールフォーム</h3>
               <p>お問い合わせ・ご相談・採用のお申込みはこちらから。まずはお気軽にご連絡ください。<br />
                 託児、見学のご予約はお電話でお願いします。<br />
