add corporate name

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 <!--<![endif]-->
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZBP5K0CWC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2ZBP5K0CWC');
+</script>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -373,7 +382,7 @@ DD_belatedPNG.fix('body *');
           <div class="close">
             <div class="line"></div>
             <ul class="disc_y">
-              <li>生後50日以上～2歳児まで</li>
+              <li>生後57日以上～2歳児まで</li>
             </ul>
           </div><!-- open -->
         </div><!-- box-cebter -->
@@ -385,7 +394,7 @@ DD_belatedPNG.fix('body *');
           <div class="close">
             <div class="line"></div>
             <ul class="disc_y">
-              <li>生後50日目～2歳児までの一時保育<br />
+              <li>生後57日目～2歳児までの一時保育<br />
                 月曜～金曜日　9:00~20:00</li>
 
             </ul>
@@ -501,6 +510,10 @@ DD_belatedPNG.fix('body *');
         <p>助産師と保育士がお子様を安全にお預かりいたしますので、まずはお気軽にお問い合わせください。</p>
         <div class="box-center cf">
           <table class="boxtable">
+            <tr>
+              <td class="boxtd">法人名</td>
+              <td>株式会社 COMO EN CASA</td>
+            </tr>
             <tr>
               <td class="boxtd">園名</td>
               <td>COMO EN CASA青山キッズクラブ</td>
@@ -793,7 +806,7 @@ DD_belatedPNG.fix('body *');
         <ul class="disc_y" style="margin:auto;">
           <li>
             <p><span style="font-weight: bold;">食事</span><br />
-              食事提供(完了食の1歳～小学6年)　　昼食700円・おやつ300円・夕飯700円</p>
+              食事提供(完了食の1歳〜3歳)　　昼食700円・おやつ300円・夕飯700円</p>
             <p>※事前予約制になっていますので、ご希望の方はご利用日の前にお知らせください。<br />
               食事に関しては、<a href="#lunch">一時保育のページ</a>をご参照下さい。</p>
           </li>
@@ -909,7 +922,8 @@ DD_belatedPNG.fix('body *');
         <ul class="disc_y" style="margin-left:20px;">
           <li>ご利用には事前のご予約が必要です。</li>
           <li>コモエンカサスタッフが出てからお母様がコモエンカサにお迎えにいらっしゃるまでの保育料がかかります。</li>
-          <li>1時間からのご利用になります。1時間2310円 　※タクシー移動の場合は、別途請求させて頂きます。</li>
+          <li>1回2310円(1時間以内の送迎)<br />
+          ※タクシー移動場合は、別途請求させて頂きます。</li>
         </ul>
       </div>
 
