remove daycare service

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ DD_belatedPNG.fix('body *');
             </tr>
             <tr>
               <td class="boxtd">種別</td>
-              <td>企業主導型保育園・認可外保育施設</td>
+              <td>企業主導型保育園</td>
             </tr>
             <tr>
               <td class="boxtd">開所日</td>
