correct favicon location

--- a/about_us/index.html
+++ b/about_us/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <link rel="stylesheet" type="text/css" href="../css/sp.css" />
   <link rel="stylesheet" type="text/css" href="assets/style.css?version=202306291111" />
+  <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
 
   <!-- Meta Pixel Code -->
   <script>
