top page content update

--- a/about_us/index.html
+++ b/about_us/index.html
@@ -74,18 +74,18 @@
     <div class="main_banner animate__animated animate__fadeIn animate__slow">
       <div class="main_banner_contents">
         <div class="ordermaid_text_container animate__animated animate__fadeIn animate__delay-1s">
-          <span class="main_banner_text main_banner_text_smaller">
+          <span class="main_banner_text main_banner_text_smaller_smaller">
             月極保育料 時間割計算*
           </span>
-          <span class="main_banner_text">
+          <span class="main_banner_text main_banner_text_smaller">
             0歳児 281円~
           </span>
-          <span class="main_banner_text">
+          <span class="main_banner_text main_banner_text_smaller">
             1歳児 250円~
           </span>
-          <div class="yellow_dot_line" style="width: 262px;"></div>
+          <div class="yellow_dot_line" style="width: 162px;"></div>
         </div>
-        <div class="organic_text_container animate__animated animate__fadeIn animate__delay-2s animate__slow">
+        <!-- <div class="organic_text_container animate__animated animate__fadeIn animate__delay-2s animate__slow">
           <span class="main_banner_text main_banner_text_smaller_smaller">
             カリキュラム<br>
             (英語・体操・絵画・リトミック)
@@ -97,6 +97,18 @@
             すべて込み
           </span>
           <div class="yellow_dot_line" style="width: 200px;"></div>
+        </div> -->
+        <div class="speech_bubble animate__animated animate__fadeIn animate__delay-2s animate__slow">
+          <div class="speech_bubble_text">
+            登園時間もフレキシブルに決められるので<br />
+            仕事をしながら家族の時間も大切にできました。
+          </div>
+        </div>
+        <div class="openinghour_text_container animate__animated animate__fadeIn animate__delay-1s">
+          <span class="main_banner_text main_banner_text">
+            夜20時までお預かりOK
+          </span>
+          <div class="yellow_dot_line" style="width: 288px;"></div>
         </div>
         <div class="come_join_us animate__animated animate__fadeIn animate__delay-2s animate__slower">
           <div class="come_join_us_text_fistline">
