--- a/about_us/index.html
+++ b/about_us/index.html
@@ -178,11 +178,11 @@
               <table class="contact_info">
                 <tr>
                   <th><img src="../img/address.png" alt="住所"></th>
-                  <td>東京都港区南青山4−7-11<br />プロヴァンス南青山審美館1F</td>
+                  <td>東京都港区南青山4-7-11<br />ミッキーハウス南青山1F</td>
                 </tr>
                 <tr>
                   <th><img src="../img/access.png" alt="アクセス"></th>
-                  <td>外苑前駅より　徒歩7分</td>
+                  <td>外苑前駅より 徒歩7分</td>
                 </tr>
                 <tr>
                   <th><img src="../img/mail.png" alt="メールアドレス"></th>
