--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ DD_belatedPNG.fix('body *');
             <span class="bg_top"></span><span class="bg_left"></span><span class="bg_right"></span><span
               class="bg_bottom"></span>青山校(月極保育)
           </h3>
-          <p>東京都港区南青山4-7-11　プロヴァンス南青山審美館101</p>
+          <p style="text-align: center;">東京都港区南青山4-7-11<br />ミッキーハウス南青山101</p>
         </div>
         <ul class="disc_y" style="margin:auto;">
           <li>
@@ -1253,11 +1253,11 @@ DD_belatedPNG.fix('body *');
           <table class="contact_info">
             <tr>
               <th><img src="img/address.png" alt="住所"></th>
-              <td>東京都港区南青山4−7-11<br />プロヴァンス南青山審美館1F</td>
+              <td>東京都港区南青山4-7-11<br />ミッキーハウス南青山</td>
             </tr>
             <tr>
               <th><img src="img/access.png" alt="アクセス"></th>
-              <td>外苑前駅より　徒歩7分</td>
+              <td>外苑前駅より 徒歩7分</td>
             </tr>
             <tr>
               <th><img src="img/mail.png" alt="メールアドレス"></th>
