update http to https

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- close.SEO -->
 
   <!-- links -->
-  <link rel="canonical" href="http://www.comoencasa.jp/" />
+  <link rel="canonical" href="https://www.comoencasa.jp/" />
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon-precomposed.png" />
@@ -63,7 +63,7 @@ DD_belatedPNG.fix('body *');
   <meta property="og:title" content="コモエンカサ">
   <meta property="og:type" content="website">
   <meta property="og:description" content="コモエンカサ　外苑前駅徒歩7分にあるプレスクール託児所・ベビーシッター。お母様とお子様に優しい環境をご提供しています。">
-  <meta property="og:url" content="http://www.comoencasa.jp/">
+  <meta property="og:url" content="https://www.comoencasa.jp/">
   <meta property="og:image" content="icon">
   <meta property="og:site_name" content="COMO EN CASA">
   <meta property="og:email" content="info@comoencasa.jp">
@@ -699,7 +699,7 @@ DD_belatedPNG.fix('body *');
                 <p class="note_title">仕入れ先</p>
 
                 <ul class="disc_g">
-                  <li><a href="http://farmersmarkets.jp" target="_blank">青山Farmer’s Market 「バグラスファーマーズ」etc..</a></li>
+                  <li><a href="https://farmersmarkets.jp" target="_blank">青山Farmer’s Market 「バグラスファーマーズ」etc..</a></li>
                   <li>岡山県の無農薬米農家　井上さん</li>
                   <li><a href="https://www.ohsawa-japan.co.jp" target="_blank">オーサワジャパン</a></li>
                   <li><a href="https://www.tohto-coop.or.jp" target="_blank">東都生協</a></li>
@@ -1064,11 +1064,11 @@ DD_belatedPNG.fix('body *');
 
           <ul class="disc_y" style="margin-left:20px;">
             <li><a href="https://pal-at-lanai.com/" target="_blank">PaL at Lanai【パルアットラナイ】</a></li>
-            <li><a href="http://www.hmchic.com/" target="_blank">CHIC omotesando 【シック オモテサンドウ】</a></li>
-            <li><a href="http://www.ar-nuchigusui.com/" target="_blank">aR整体院　ぬちぐすい</a></li>
+            <li><a href="https://www.hmchic.com/" target="_blank">CHIC omotesando 【シック オモテサンドウ】</a></li>
+            <li><a href="https://www.ar-nuchigusui.com/" target="_blank">aR整体院　ぬちぐすい</a></li>
             <li><a href="https://la.billage.space/" target="_blank">コワーキングスペース la billage ( ラ ビレッジ )</a></li>
             <li><a href="https://www.gym-pro.net/" target="_blank">体育塾のジムプロ(gym-pro)</a></li>
-            <li><a href="http://www.goldsgym.jp" target="_blank">スポーツジム・フィットネスクラブ ゴールドジム表参道東京</a></li>
+            <li><a href="https://www.goldsgym.jp" target="_blank">スポーツジム・フィットネスクラブ ゴールドジム表参道東京</a></li>
             <li><a href="https://harisienne.com/" target="_blank">エステサロン ハリジェンヌ表参道校</a></li>
             <!--<li><a href="http://cheeky-nail.com" target="_blank">cheeky(チーキー)</a></li>-->
           </ul>
@@ -1260,7 +1260,7 @@ DD_belatedPNG.fix('body *');
 
   <!-- /////////////  LINK /////////////// -->
   <section>
-    <p class="footer_banner1"><a href="http://pal-at-lanai.com" target="_blank"><img src="image/201506005.jpg" width="234" height="60" border="0" alt="pal at lanai"></a></p>
+    <p class="footer_banner1"><a href="https://pal-at-lanai.com" target="_blank"><img src="image/201506005.jpg" width="234" height="60" border="0" alt="pal at lanai"></a></p>
     <!--<li><a href="http://cheeky-nail.com" target="_blank"><img src="footer_bunner/cheeky_nailsalon_bunner.png" width="234" height="60" border="0" alt="スタートライン" /></a></li>-->
   </section>
 
