--- a/sitter.html
+++ b/sitter.html
@@ -28,7 +28,7 @@
   <!-- close.SEO -->
 
   <!-- links -->
-  <link rel="canonical" href="http://www.comoencasa.jp/" />
+  <link rel="canonical" href="https://www.comoencasa.jp/" />
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon-precomposed.png" />
@@ -51,7 +51,7 @@ DD_belatedPNG.fix('body *');
   <meta property="og:title" content="コモエンカサ">
   <meta property="og:type" content="website">
   <meta property="og:description" content="コモエンカサ　表参道駅徒歩2分にあるプレスクール託児所・ベビーシッター。お母様とお子様に優しい環境をご提供しています。">
-  <meta property="og:url" content="http://www.comoencasa.jp/">
+  <meta property="og:url" content="https://www.comoencasa.jp/">
   <meta property="og:image" content="icon">
   <meta property="og:site_name" content="COMO EN CASA">
   <meta property="og:email" content="info@comoencasa.jp">
@@ -537,10 +537,10 @@ DD_belatedPNG.fix('body *');
   <section>
     <div class="fotter_bunner">
       <ul>
-        <li><a href="http://pal-at-lanai.com" target="_blank"><img src="image/201506005.jpg" width="234" height="60"
+        <li><a href="https://pal-at-lanai.com" target="_blank"><img src="image/201506005.jpg" width="234" height="60"
               border="0" alt="スタートライン" /></a></li>
-        <li><a href="http://cheeky-nail.com" target="_blank"><img src="footer_bunner/cheeky_nailsalon_bunner.png"
-              width="234" height="60" border="0" alt="スタートライン" /></a></li>
+        <!-- <li><a href="http://cheeky-nail.com" target="_blank"><img src="footer_bunner/cheeky_nailsalon_bunner.png"
+              width="234" height="60" border="0" alt="スタートライン" /></a></li> -->
       </ul>
     </div>
   </section>
