gtag to sniarti.fi

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZBP5K0CWC"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2RGVLBJLKH"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-2ZBP5K0CWC');
+    gtag('config', 'G-2RGVLBJLKH');
   </script>
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
